# EnvManager

./: .gitignore  README.md  main.py  pyproject.toml  setup.sh
utils/: decrypt.py  encrypt.py  generate.py  push.py
